--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="com.rysanek.pokeparse">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:name=".di.BaseApp"
+        android:name=".di.PokeApp"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
